# lcbg

./: Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  docker.py  environment.yml  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
docs/lcbg/: index.rst
lcbg/: cosmology.py  fitting.py  petrosian.py  photometry.py  segmentation.py  utils.py
notebooks/: reproduce_astrodeep_abell2744_cat.ipynb
notebooks/able_2744/: hlsp_frontier_hst_abell2744_v1.0_drz_patrosian_catalog.csv  k_correct_astrodeep.ipynb  visualize_lcbg_catalog.ipynb
notebooks/cosmology/: Aperture Diameter of 7.5 kpc at Abell 2744.ipynb  Aperture Diameter of 7.5 kpc at Abell 370.ipynb
notebooks/dev/: fitting.ipynb  measure_fwhm.ipynb
notebooks/find_lcbgs/: hlsp_frontier_hst_wfc3-60mas_abell2744_f105w_v1.0_drz_catalog.csv  hlsp_frontier_hst_wfc3-60mas_abell2744_f105w_v1.0_drz_catalog_petrosian.csv  hlsp_frontier_hst_wfc3-60mas_abell2744_f125w_v1.0_drz_catalog.csv  hlsp_frontier_hst_wfc3-60mas_abell2744_f125w_v1.0_drz_catalog_petrosian.csv  hlsp_frontier_hst_wfc3-60mas_abell2744_f140w_v1.0_drz_catalog.csv  hlsp_frontier_hst_wfc3-60mas_abell2744_f140w_v1.0_drz_catalog_petrosian.csv  hlsp_frontier_hst_wfc3-60mas_abell2744_f160w_v1.0_drz_catalog.csv  hlsp_frontier_hst_wfc3-60mas_abell2744_f160w_v1.0_drz_catalog_petrosian.csv  hlsp_frontier_hst_wfc3-60mas_abell2744_v1.0_drz_lcbg_catalog.csv  hlsp_frontier_hst_wfc3-60mas_abell2744_v1.0_drz_magnitude_catalog.csv  k_correct.ipynb  k_correct_astrodeep.ipynb  petrosian_radius.ipynb  petrosian_radius_all_filters.ipynb  visualize_lcbg_catalog.ipynb
notebooks/initial_photometry/: A2744cl_A.cat  hlsp_frontier_hst_wfc3-60mas_abell2744_f105w_v1.0_drz_catalog.csv  visualize_data.ipynb  (+5 more)
(+8 files in other folders)
