[metadata]
name = lcbg
author = Steve Crawford, Robel Geda
author_email = rgeda@stsci.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/crawfordsm/lcbg
description = Software for LCBGs
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = crawfordsm/lcbg

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    extension_helpers


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
lcbg = data/*

[tool:pytest]
testpaths = "lcbg" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    lcbg/_astropy_init*
    lcbg/conftest.py
    lcbg/*setup_package*
    lcbg/tests/*
    lcbg/*/tests/*
    lcbg/extern/*
    lcbg/version*
    */lcbg/_astropy_init*
    */lcbg/conftest.py
    */lcbg/*setup_package*
    */lcbg/tests/*
    */lcbg/*/tests/*
    */lcbg/extern/*
    */lcbg/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
